2007-04-23  Soren Hauberg  <soren@hauberg.org>

	* data.cc (Fsize_equal): Allow more than two arguments.

2007-04-20  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__gnuplot_raw__.l (deftypefn): 
	(Vautomatic_replot): Delete static variable.
	(Fautomatic_replot): Delete function.

	* toplev.cc (Fcasesen): Delete obsolete function.

	* DLD-FUNCTIONS/__gnuplot_raw__.l (gnuplot::makeplot): Check
	whether caller is "splot", not "gsplot".

2007-04-19  John W. Eaton  <jwe@octave.org>

	* lex.l (is_keyword_token): Delete all_va_args_kw switch case.
	* octave.gperf: Remove all_va_args_kw from the list.

2007-04-19  Daniel J. Sebald  <daniel.sebald@ieee.org>

	* syscalls.cc: Fix popen2 test to stop trying after 100 times
	throught the loop.

2007-04-16  Geordie McBain  <geordie.mcbain@aeromech.usyd.edu.au>

	* ov-fcn-inline.cc (Fargnames): Doc fix.

2007-04-13  Geordie McBain  <geordie.mcbain@aeromech.usyd.edu.au>

	* DLD-FUNCTIONS/find.cc (Ffind): Doc fix.

2007-04-11  John W. Eaton  <jwe@octave.org>

	* Makefile.in (DOCSTRINGS): Don't echo commands.
	(doc-files): Use mv, not $(simple-move-if-change-rule).

	* data.cc (Fnot, Fuplus, Fuminus, Ftranspose, Fctranspose, Fplus,
	Fminus, Fmtimes, Fmrdivide, Fmpower, Fmldivide, Flt, Fle, Feq,
	Fge, Fgt, Fne, Ftimes, Frdivide, Fpower, Fldivide, Fand, For):
	New functions.

2007-04-09  John W. Eaton  <jwe@octave.org>

	* graphics.cc (line::line_properties::markeredgecolor,
	line::line_properties::markerfacecolor): New properties.

2007-04-06  John W. Eaton  <jwe@octave.org>

	* data.cc (F__vnorm__): New function.

	* pt-fcn-handle.cc (tree_anon_fcn_handle::param_list, 
	tree_anon_fcn_handle::cmd_list,	tree_anon_fcn_handle::ret_list,
	tree_anon_fcn_handle::sym_tab): Delete.  Remove all uses.
	(tree_anon_fcn_handle::fcn): New data member.
	(tree_anon_fcn_handle::tree_anon_fcn_handle): Initialize it.
	(tree_anon_fcn_handle::rvalue, tree_anon_fcn_handle::dup):
	Extract parameter list, return list, function body, and symbol